--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,23 @@
   vertical-align: top;
 }
 
+/* New Orders CSS  Table*/
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:hover {
+  background-color: #f5f5f5;
+}
+
 /* For demo */
 .ant-carousel .slick-slide {
   text-align: center;
@@ -24,4 +41,15 @@
 
 .ant-carousel .slick-slide h3 {
   color: #fff;
+}
+
+@media print {
+  .ant-layout-sider,
+  .ant-row,
+  .ant-page-header-back-button,
+  hr,
+  .steps,
+  .ant-layout-sider-has-trigger {
+    display: none;
+  }
 }
