--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ tr:hover {
   .ant-layout-sider,
   .ant-row,
   .ant-page-header-back-button,
+  .progress,
   hr,
   .steps,
   .ant-layout-sider-has-trigger {
